assets/css/style.css
/* CSS RESET */

/* 1. Use a more-intuitive box-sizing model */
*, *::before, *::after {
  box-sizing: border-box;
}

/* 2. Remove default margin & padding*/
* {
  margin: 0;
  padding: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Increase line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
}

/* 6. Improve media defaults */
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input, button, textarea, select {
  font: inherit;
}

/* 8. Avoid text overflows */
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1, h2, h3, h4, h5, h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root, #__next {
  isolation: isolate;
}

/* ----------------------------------------------------------------- */

/* VARIABLES */

:root {
    /* Colors */
    --color-base-dark: hsla(240, 76%, 10%, 100%);
    --color-base-middle: hsla(0, 0%, 75%, 100%);
    --color-base-bright: hsla(0, 0%, 100%, 100%);
    --accent-gradient: linear-gradient(90deg, hsla(180, 96%, 56%, 100%), hsla(193, 99%, 35%, 100%));
    --accent-bright: hsla(180, 96%, 56%, 100%);
    --accent-dark: hsla(187, 100%, 45%, 100%);

    /* Typography */
    --anchor-font: "Exo 2", sans-serif;
    --secondary-font: "Manrope", sans-serif;
}

/* GLOBAL STYLES */

/* Typography */

h1 {
    font-family: var(--anchor-font);
    font-size: 4.5rem;
    font-weight: 500;
    color: var(--color-base-bright);

    line-height: 0.9;
}

h2 {
    font-family: var(--anchor-font);
    font-size: 2.5rem;
    font-weight: 600;
    color: var(--color-base-bright);
}

h3 {
    font-family: var(--secondary-font);
    font-size: 1.5rem;
    font-weight: 700;
    color: var(--color-base-bright);
}

h4 {
    font-family: var(--secondary-font);
    font-size: 1.5rem;
    font-weight: 600;
    color: var(--color-base-bright);
}

h5 {
    font-family: var(--secondary-font);
    font-size: 1.25rem;
    font-weight: 600;
    color: var(--color-base-bright);
}

h6 {
    font-family: var(--secondary-font);
    font-size: 1.25rem;
    font-weight: 500;
    color: var(--color-base-bright);
}

p {
    font-family: var(--anchor-font);
    font-size: 1rem;
    font-weight: 400;
    color: var(--color-base-bright);
}

a {
  font-family: var(--secondary-font);
  font-size: 1rem;
  font-weight: 500;
  letter-spacing: 0.05rem;
  color: var(--color-base-bright);
  cursor: pointer;

  display: inline-block;
  transition: all 0.75s ease;
}

a:hover {
  color: var(--accent-bright);
  transform: translateY(-0.1rem);
}

a:active {
  transition: all 0.05s;

  filter: brightness(0.9);
}

button {
    font-family: var(--secondary-font);
    font-size: 1rem;
    font-weight: 500;
    letter-spacing: 0.05rem;
    color: var(--color-base-bright);
    cursor: pointer;
}

ul, ol, li {
  font-family: var(--anchor-font);
  font-size: 1rem;
  font-weight: 400;
  color: var(--color-base-bright);
}

/* Buttons */

.button-primary {
  position: relative;
  overflow: hidden;
  border: none;

  padding: 0.5rem 2.5rem;
  border-radius: 1rem;
  background: var(--accent-gradient);

  transition: all 0.75s ease;
}

.button-primary::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: inherit;

  padding: 0.125rem;
  background: linear-gradient(90deg, hsla(0, 0%, 100%, 100%), hsla(0, 0%, 100%, 25%), hsla(0, 0%, 100%, 0%));
  background-size: 100% 100%;

  transition: background-size 0.75s ease;

  -webkit-mask:
            linear-gradient(#fff 0 0) content-box,
            linear-gradient(#fff 0 0);
  mask:
            linear-gradient(#fff 0 0) content-box,
            linear-gradient(#fff 0 0);

  -webkit-mask-composite: xor;
  mask-composite: exclude;
}

.button-primary:hover {
  filter: brightness(1.1);
  transform: translateY(-0.1rem);
}

.button-primary:hover::before {
  background-size: 500% 500%;
}

.button-primary:active {
  transition: all 0.05s;

  filter: brightness(0.9);
}

.button-secondary {
  position: relative;
  overflow: hidden;
  border: none;
  background: transparent;

  padding: 0.5rem 2.5rem;
  border-radius: 1rem;

  transition: all 0.75s ease;
}

.button-secondary::before {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: inherit;

  padding: 0.125rem;
  background: var(--accent-gradient);

  transition: background-size 0.75s ease;

  -webkit-mask:
            linear-gradient(#fff 0 0) content-box,
            linear-gradient(#fff 0 0);
  mask:
            linear-gradient(#fff 0 0) content-box,
            linear-gradient(#fff 0 0);

  -webkit-mask-composite: xor;
  mask-composite: exclude;
}

.button-secondary::after {
  content: "";
  position: absolute;
  inset: 0;
  border-radius: inherit;

  background: var(--accent-gradient);

  transform: scaleX(0);
  transform-origin: left;

  transition: transform 0.75s ease;

  z-index: -1;
}

.button-secondary:hover {
  filter: brightness(1.1);
  transform: translateY(-0.1rem);
}

.button-secondary:hover:after {
  transform: scaleX(1);
}

.button-secondary:active {
  transition: all 0.05s;

  filter: brightness(0.9);
}
/* ... */

